# Automodeling

./: .gitignore  CMakeLists.txt  README.md
AutoModelingExperiments/: Axis.cpp  Axis.h  CMakeLists.txt  ClassifyTeeth.cpp  ClassifyTeeth.h  DiagnosticsMethods.cpp  DiagnosticsMethods.h  Experiments.cpp  Experiments.h  Features.cpp  Features.h  MachineLearningExperiments.cpp  MachineLearningExperiments.h  ModelOrientation.cpp  ModelOrientation.h  Preprocessing.cpp  Preprocessing.h  Types.cpp  Types.h  Utilities.cpp  Utilities.h  VtkHeaders.h  main.cpp
AutoModelingExperiments/ContactPoints/: ContactPoints.cpp  ContactPoints.h
AutoModelingExperiments/TreatmentPlan/: TreatmentPlan.h  TreatmentPlan_Tests.cpp
AutoModelingNew/: CMakeLists.txt  README  VtkHeaders.h  main.cpp
AutoModelingNew/Estimators/: Estimator.cpp  Estimator.h
AutoModelingNew/Experiments/: EstimateCurve.cpp  EstimateCurve.h  EstimateCurve2.cpp  EstimateCurve2.h  EstimateCurve3.cpp  EstimateCurve3.h  FindBestCurveTests.cpp  FindBestCurveTests.h  Geometry.h  SetUpTeethSegments.cpp  SetUpTeethSegments.h  SetUpTorksAndPositions.cpp  SetUpTorksAndPositions.h  TeethAnglesOrientation.cpp  TeethAnglesOrientation.h  Utils.cpp  Utils.h
AutoModelingNew/Model/: Common.h  FDI.cpp  FDI.h  Jaw.cpp  Jaw.h  Tooth.cpp  Tooth.h  ToothAxis.cpp  ToothAxis.h
AutoModelingNew/TreatmentPlan/: TreatmentPlan.cpp  TreatmentPlan.h  TreatmentPlan_Tests.cpp  TreatmentPlan_UnitTests.cpp
AutoModelingNew/Utilities/: Utilities.cpp  Utilities.h
AutoModelingTools/: CMakeLists.txt  Types.cpp  Types.h  Utilities.cpp  Utilities.h  main.cpp
AutoModelingTools/TreatmentPlan/: TreatmentPlan.cpp  TreatmentPlan.h  TreatmentPlan_Tests.cpp  TreatmentPlan_UnitTests.cpp
AutoModelingTools/TreatmentPlan/data/: Plan.json  out_after.json  out_after_res.json  out_before.json  out_before_res.json
